// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MinimumDurationLoader custom loader, loaded on mount renders 1`] = `
<MinimumDurationLoaderInner
  isLoaded={true}
  loader={
    <span>
      Custom Loader
    </span>
  }
  minDuration={1000}
>
  <span
    data-test-content={true}
  >
    Content
  </span>
</MinimumDurationLoaderInner>
`;

exports[`MinimumDurationLoader custom loader, not loaded on mount renders 1`] = `
<MinimumDurationLoaderInner
  isLoaded={false}
  loader={
    <span>
      Custom Loader
    </span>
  }
  minDuration={1000}
>
  <span
    data-test-content={true}
  >
    Content
  </span>
</MinimumDurationLoaderInner>
`;

exports[`MinimumDurationLoader default loader, loaded on mount renders 1`] = `
<MinimumDurationLoaderInner
  isLoaded={true}
  loader={
    <div
      className="loading"
      data-test-loader={true}
    />
  }
  minDuration={1000}
>
  <span
    data-test-content={true}
  >
    Content
  </span>
</MinimumDurationLoaderInner>
`;

exports[`MinimumDurationLoader default loader, not loaded on mount renders 1`] = `
<MinimumDurationLoaderInner
  isLoaded={false}
  loader={
    <div
      className="loading"
      data-test-loader={true}
    />
  }
  minDuration={1000}
>
  <span
    data-test-content={true}
  >
    Content
  </span>
</MinimumDurationLoaderInner>
`;
